Fix offset on iPhone X
JIRA issue: FRON-1291

--- a/mobile/client/src/app/stylists/stylists-search/stylists-search.component.scss
+++ b/mobile/client/src/app/stylists/stylists-search/stylists-search.component.scss
@@ -123,3 +123,14 @@ page-stylists-search {
     }
   }
 }
+
+/* iphone X and t */
+@media only screen and (min-device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+  page-stylists-search {
+    .StylistsPage {
+      .scroll-content {
+        transform: translateY(pxtovw(264px));
+      }
+    }
+  }
+}
